--- a/src/style.css
+++ b/src/style.css
@@ -746,3 +746,14 @@ html {
   .fork-btn-inner::after {
     display: none !important;
   }
+
+  .ui{
+    background: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 100px;
+    height: 100px;
+}
